# planet_ruler

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL_CONDA.md  LICENSE  README.md  build.sh  earth_radius.ipynb  limb_demo-pluto-lite.ipynb  limb_demo-saturn.ipynb  limb_demo.ipynb  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  resectioning_sandbox.ipynb  test_new_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  draft-pdf.yml
.hypothesis/constants/: 07d009d55ec00ac7  080ce1c1e1dab60c  2b66a9cb9c9a4157  30a44235627eb64c  adc83b19e793491b  b502aa75ba778811  cf48287204ab9c9f  da2963c3ffbddca9
base/: planet_ruler.py
config/: basic_resection.yaml  pluto-new-horizons.yaml  pluto_limb_1.json  saturn-cassini-1.yaml  saturn-cassini-2.yaml  saturn-cassini.yaml  saturn_limb_1.json  saturn_limb_2.json
demo/: pluto_init.md  saturn_init_1.md  saturn_init_2.md
dev/bench/: data.js
docs/: Makefile  api.rst  benchmarks.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  modules.rst  requirements.txt  science.rst  testing.rst  tutorial_advanced_manual.rst  tutorial_airplane.rst  tutorial_autoconfig.rst  tutorial_gradient_field.rst  tutorial_method_selection.rst  tutorial_preconfig.rst  tutorials.rst
docs/images/: PIA19948.tif
docs/science/: camera_specifications.rst  detection_methods.rst  geometry_basics.rst  gradient_field.rst  historical_methods.rst  methodology.rst
notebooks/: build_demos.ipynb  limb_demo-pluto-lite.ipynb  limb_demo-pluto.ipynb  limb_demo-saturn.ipynb  limb_demo.ipynb  limb_demo_gradient_field.ipynb  measure.ipynb  minimum_altitude_demo.ipynb  pluto_limb.npy
notebooks/demos/: limb_demo.ipynb  limb_demo_gradient_field.ipynb
notebooks/dev/: earth_radius.ipynb  toy.ipynb
notebooks/tutorials/: measure_your_planet.ipynb  quick_reference.md
paper/: paper.bib  paper.md
planet_ruler/: __init__.py  annotate.py  camera.py  cli.py  crop.py  dashboard.py  demo.py  fit.py  geometry.py  image.py  observation.py  plot.py  uncertainty.py  validation.py
planet_ruler/benchmarks/: README.md  __init__.py  analyze_benchmarks.py  analyzer.py  annotation_rms.ipynb  augment_annotations.py  run_benchmarks.py  runner.py  synthetic.py  vet_images.py  vet_inspect.ipynb  visualize.ipynb
planet_ruler/benchmarks/annotations/: example.json  pexels-alexquezada-11795377_exif_cropped_limb_points.json  pexels-alexquezada-11795377_exif_limb_points.json  pexels-claiton-17217951_exif_cropped_limb_points.json  pexels-dariuskrs-15743284_exif_cropped_limb_points.json  pexels-didsss-14753328_exif_cropped_limb_points.json  pexels-farhan-naqui-2243423-29393135_exif_cropped_limb_points.json  pexels-heinz-reisenhofer-2155138929-33976726_exif_cropped_limb_points.json  pexels-juliana-crillanovick-10474342-10510843_exif_cropped_limb_points.json  pexels-life-5291836_exif_cropped_limb_points.json  synth_iphone_13_h10km_clean_limb_points.json  synth_iphone_13_h10km_noisy1px_limb_points.json  synth_iphone_13_h10km_noisy2px_limb_points.json  synth_iphone_13_h15km_clean_limb_points.json  synth_iphone_13_h5km_clean_limb_points.json  synth_iphone_14_pro_h10km_clean_limb_points.json  (+9 more)
tests/: conftest.py  test_annotate.py  test_benchmark_augment.py  test_benchmark_cli.py  test_benchmark_performance.py  test_benchmark_synthetic.py  test_benchmarks.py  test_camera.py  test_cli_advanced.py  test_cli_basic.py  test_crop.py  test_dashboard.py  test_demo.py  test_fit.py  test_geometry.py  test_image.py  test_integration_real_data.py  test_observation.py  test_performance.py  test_plot.py  test_property_geometry.py  test_segmentation.py  test_uncertainty.py  test_validation.py
utils/: fit.py  geometry.py  image.py
(+4 files in other folders)
