[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planet_ruler"
authors = [
    {name = "Brandon Anderson", email = "bogsdarking@proton.me"}
]
description = "A tool to infer the radius of the planet you are sitting on."
version = "1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0,<3.0.0",
    "matplotlib>=3.5.0,<4.0.0",
    "numpy>=1.20.0,<2.0.0",
    "tqdm>=4.60.0,<5.0.0",
    "scipy>=1.7.0,<2.0.0",
    "Pillow>=8.0.0,<12.0.0",
    "PyYAML>=5.4.0,<7.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "ipywidgets>=7.6.0,<9.0.0",
    "ipython>=7.16.0,<9.0.0",
    "kagglehub>=0.1.0,<1.0.0; python_version>='3.9'",
    "segment-anything>=1.0,<2.0.0; python_version>='3.8'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bogsdarking/planet-ruler"
Issues = "https://github.com/bogsdarking/planet-ruler/issues"

[tool.hatch.build.targets.wheel]
packages = ["planet_ruler"]